# vulkan-motor

./: .gitignore  README.md  XM3.sln  generate_solution.bat  premake5.lua
src/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  Engine.vcxproj  Engine.vcxproj.filters  Game.vcxproj  Game.vcxproj.filters  main.cpp  premake5.lua
src/animation/: CMakeLists.txt  animation.cpp  animation.hpp  animator.cpp  animator.hpp  attachment.cpp  attachment.hpp  bone_attachment.cpp  bone_attachment.hpp  keyframe.hpp  rig.cpp  rig.hpp  rig_component.cpp  rig_component.hpp  rigged_mesh_component.hpp
src/asset/: CMakeLists.txt  animation_cache.hpp  asset_cache.hpp  cube_map_cache.hpp  font_cache.hpp  font_family_cache.hpp  geom_mesh_cache.hpp  rigged_mesh_cache.hpp  rigged_mesh_loader.cpp  rigged_mesh_loader.hpp  scene_loader.cpp  scene_loader.hpp  scene_loader_assimp.cpp  texture_cache.hpp  video_cache.hpp
src/core/: CMakeLists.txt  ambience.cpp  ambience.hpp  ancestry_changed_callbacks.cpp  ancestry_changed_callbacks.hpp  application.cpp  application.hpp  base_stream.hpp  camera.cpp  camera.hpp  common.hpp  components.cpp  components.hpp  context_action.cpp  context_action.hpp  data_model.cpp  data_model.hpp  destroyed_callbacks.cpp  destroyed_callbacks.hpp  events.hpp  geom.cpp  geom.hpp  geom_instance.hpp  geom_type.hpp  hashed_string.hpp  imageplane.cpp  imageplane.hpp  imageplane_instance.hpp  instance.cpp  instance.hpp  instance_class.hpp  instance_factory.cpp  instance_factory.hpp  instance_handle.hpp  instance_utils.cpp  instance_utils.hpp  local.hpp  logging.cpp  logging.hpp  memory.hpp  (+17 more)
src/ecs/: CMakeLists.txt  component_pool.hpp  ecs.cpp  ecs.hpp  ecs_fwd.hpp  sparse_set.hpp  type_id_generator.hpp  view.hpp
src/editor/: editor_camera.cpp  editor_camera.hpp  editor_ui.cpp  editor_ui.hpp  properties.hpp
src/file/: CMakeLists.txt  file.hpp  file_system.cpp  file_system.hpp  os_file.cpp  os_file.hpp  os_file_system.cpp  os_file_system.hpp  path_utils.cpp  path_utils.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp  game_camera.cpp  game_camera.hpp  gameworld.cpp  gameworld.hpp  player.cpp  player.hpp
src/math/: CMakeLists.txt  bone_transform.cpp  bone_transform.hpp  color3.hpp  color3uint8.hpp  common.hpp  geometric.hpp  matrix.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  matrix_projection.hpp  rect.hpp  (+8 more)
(+234 files in other folders)
